# HDC-aDBS

./: .gitignore  README.md  main.py  pyproject.toml
artifacts/closed_loop/: per_run_metrics.csv  run_manifest.yaml  summary.yaml  summary_by_condition.csv
artifacts/encoder_search/: freeze_record.yaml  leaderboard.csv  results.jsonl
artifacts/models/: train_report.yaml  training_audit.yaml
configs/: sim_config.py
controllers/: __init__.py  base.py  beta_controller.py  eval_metrics.py  hdc_controller.py  run_closedloop_benchmark.py  run_controller.py  waveform.py
docs/: encoder-searchspace.md  experiment-spec.md  hdc-encoder-optsearch.md  hdc.md  models.md  ode-test.md  usage.md
docs/planning/: backlog.md  overview.md  (+7 more)
hdc/: __init__.py  dictionaries.py  encoder.py  initializers.py  primitives.py  readouts.py  training.py
notebooks/: 01_sim_validation.ipynb
ode-checks/: open-loop-sanity.py
plots/: __init__.py  common.py  generate_all.py  plot_calibration_effect.py  plot_closedloop_latency.py  plot_closedloop_metric_by_condition.py  plot_offline_model_performance.py  plot_overfit_gap.py  plot_overfit_tradeoff.py  plot_presentation_hdc_vs_beta.py  plot_search_guardrail_tradeoff.py  plot_search_heatmap.py  plot_search_speed_accuracy.py
tests/: test_closedloop_metrics.py  test_controllers.py  test_data_pipeline.py  test_hdc_core.py  test_open_loop_sanity.py  test_reproducibility_dummy.py  test_simulation.py  test_training_layer.py  test_validator_search.py
train/: build-static-dataset.py  calibrate-overfitting.py  prepare-static-splits.py  valid-train.py
(+56 files in other folders)
